--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <p class="two" id="greetingText">I really like you</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>I am really sorry!!! :Amrita</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            you are the person I want in my life
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -51,8 +51,8 @@
       <div class="six">
         <img src="img/amrita.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText">Happy Valentine’s Day my love! You mean the world to me, and I will forever love you!</h5>
+          <h3 class="wish-hbd">I LOVE YOU AMRITA</h3>
+          <h5 id="wishText">I am sorry from the core of my heart for hurting you this bad. Please forgive me. I love you.</h5>
         </div>
       </div>
       <div class="seven">
