--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     />
     <link rel="shortcut icon" type="image/png" href="./img/heart.svg" />
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   </head>
 
   <body>
@@ -19,28 +21,30 @@
           Hey
           <span id="name">Amrita</span>
         </h1>
-        <p class="two" id="greetingText">I really like you</p>
+        <p class="two" id="greetingText">I am Manoj</p>
       </div>
       <div class="three">
-        <p>I am really sorry!!! :Amrita</p>
+        <p>তুই যেদিন আমাকে call করেছিলি আমি একটু ব্যাস্ত ছিলাম</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            you are the person I want in my life
+            আমি জানি তুই আমার উপর অনেক রেগে আছিস
           </p>
-          <p class="fake-btn">Send</p>
+          <p class="fake-btn">(⌣̩̩́_⌣̩̩̀)</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
-        <p class="idea-2">But then I stopped.</p>
-        <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+        <p class="idea-1">But Sorry re...!!</p>
+        <p class="idea-2">আমি চাইনা আমাদের  বন্ধুত্ব শেষ হয়ে যাক শুধুমাত্র ভুল বোঝাবুঝির জন্য ।
         </p>
-        <p class="idea-4">Because,</p>
+        <p class="idea-3">
+          Ami ato din bujte pari ni.. <strong>Sorry</strong>.
+        </p>
+       
+        <p class="idea-4">(,,◕　⋏　◕,,)</p>
         <p class="idea-5">
-          You are Special
+          I'm Sorry
           <span>:)</span>
         </p>
         <p class="idea-6">
@@ -51,8 +55,8 @@
       <div class="six">
         <img src="img/amrita.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">I LOVE YOU AMRITA</h3>
-          <h5 id="wishText">I am sorry from the core of my heart for hurting you this bad. Please forgive me. I love you.</h5>
+          <h3 class="wish-hbd">I Apologize</h3>
+          <h5 id="wishText">I am sorry from the core of my heart for hurting you this bad. Please forgive me.</h5>
         </div>
       </div>
       <div class="seven">
@@ -124,8 +128,9 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>আমার কোনো behaviour এ  তুই যদি hurt হয়ে থাকিস তো সেটার জন্য Really Sorry!! 
+        </p>
+        <p id="replay">Ha ar please next link ta dakish...</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
