--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="wish">
           <h3 class="wish-hbd">I Apologize</h3>
           <h5 id="wishText">I am sorry from the core of my heart for hurting you this bad. Please forgive me.</h5>
+          <h4> wait for next.. </h4>
         </div>
       </div>
       <div class="seven">
